fix: canvas align

--- a/client/src/app/components/kitty-hat/kitty-hat.component.scss
+++ b/client/src/app/components/kitty-hat/kitty-hat.component.scss
@@ -15,3 +15,9 @@
     top: 115px;
     left: 1px;
 }
+
+.wrapper {
+    width: 300px;
+    height: 300px;
+    position:relative;
+}
